# pyannotate-audio-whisper-cpp

./: .gitignore  README.md  pyproject.toml
src/: download-model.py  speech-to-text-finder.py  speech-to-text.py
src/internal/: __init__.py  convert2mp4file.py  convert2wavefile.py  speaker_segment.py  speaker_seperator.py  speaker_text.py  speech_integrator.py  speech_text_file.py  speech_to_text.py
src/til-20231013/: .sample.env  index.md  pyproject.toml
src/til-20231013/src/: download-model.py  speech-to-text-finder.py  speech-to-text.py
src/til-20231013/src/internal/: speaker_integrator.py  speaker_segment_file.py  speech_text_file.py  speech_text_writer.py  speech_to_text.py
