[project]
authors = [{name = "iimuz", email = "iz.primary.story+github@gmail.com"}]
description = "音声ファイルからの書き起こしスクリプト."
license = {file = "LICENSE"}
name = "speech-to-text-sample"
readme = "README.md"
requires-python = ">=3.10"
urls = {repository = "https://github.com/iimuz/til/src/til-20231013"}
version = "1.0.0"

dependencies = [
  "onnxruntime",  # pyannote.audioでemmbedingモデルによっては必要になる
  "pyannote.audio",
  "pydantic",
  "pydub",
]

[tools.setuptools.package-dir]
speech_to_text_sample = "src"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "isort",
  "mypy",
  "types-PyYAML",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=63", "wheel"]

[tool.isort]
profile = "black"
